src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Send_To_Boomi__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is checked by Boomi to determine if a record is to be picked up and processed.</description>
        <inlineHelpText>If the box is checked, Boomi will pull the record on the next poll.  If the box is unchecked, Boomi will not pull the record.</inlineHelpText>
        <label>Send To Boomi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Provider_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of the Service Provider who submitted the referral</inlineHelpText>
        <label>Service Provider Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsidy_Program_Type__c</fullName>
        <label>Subsidy/Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VASH</fullName>
                </value>
                <value>
                    <fullName>RRH</fullName>
                </value>
                <value>
                    <fullName>Moving Home</fullName>
                </value>
                <value>
                    <fullName>Other Voucher</fullName>
                </value>
                <value>
                    <fullName>1000 Vets SBS</fullName>
                </value>
                <value>
                    <fullName>1000 Vets RRH</fullName>
                </value>
                <value>
                    <fullName>P&amp;D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Member_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member Assigned</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>SDHC Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tenant_Number_YARDI__c</fullName>
        <label>Tenant Number (YARDI)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <label>Training</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting/Bookkeeping</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Anything</fullName>
                </value>
                <value>
                    <fullName>Appliances Repair</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Blueprint Reading</fullName>
                </value>
                <value>
                    <fullName>Bookkeeping</fullName>
                </value>
                <value>
                    <fullName>Brick Laying</fullName>
                </value>
                <value>
                    <fullName>Building Maintenance</fullName>
                </value>
                <value>
                    <fullName>Carpentry</fullName>
                </value>
                <value>
                    <fullName>Cement/Masonry</fullName>
                </value>
                <value>
                    <fullName>Computer</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Demolition</fullName>
                </value>
                <value>
                    <fullName>Drywall</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Fencing</fullName>
                </value>
                <value>
                    <fullName>Flooring</fullName>
                </value>
                <value>
                    <fullName>Glass/Glazing</fullName>
                </value>
                <value>
                    <fullName>Green Construction</fullName>
                </value>
                <value>
                    <fullName>HVAC</fullName>
                </value>
                <value>
                    <fullName>Iron Works</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>IT Support</fullName>
                </value>
                <value>
                    <fullName>Janitorial</fullName>
                </value>
                <value>
                    <fullName>Landscaping</fullName>
                </value>
                <value>
                    <fullName>Machine Operator</fullName>
                </value>
                <value>
                    <fullName>Machining</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Markeing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Truck_Tractor_Driver__c</fullName>
        <label>Truck/Tractor Driver</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Of_Stakeholder__c</fullName>
        <label>Type Of Stakeholder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Landlord</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Service provider</fullName>
                </value>
                <value>
                    <fullName>General Community</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Typing_WPM__c</fullName>
        <label>Typing (WPM)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Union_Member__c</fullName>
        <label>Union Member</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Union_Name__c</fullName>
        <label>Union Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veteran__c</fullName>
        <label>Veteran</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Voucher_Issue_Date__c</fullName>
        <label>Voucher Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voucher_Size__c</fullName>
        <label>Voucher Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sro</fullName>
                </value>
                <value>
                    <fullName>0 Bdrm</fullName>
                </value>
                <value>
                    <fullName>1 Bdrm</fullName>
                </value>
                <value>
                    <fullName>2 Bdrm</fullName>
                </value>
                <value>
                    <fullName>3 Bdrm</fullName>
                </value>
                <value>
                    <fullName>4 Bdrm</fullName>
                </value>
                <value>
                    <fullName>5 Bdrm</fullName>
                </value>
                <value>
                    <fullName>6 Bdrm</fullName>
                </value>
                <value>
                    <fullName>7 Bdrm</fullName>
                </value>
                <value>
                    <fullName>8 Bdrm</fullName>
                </value>
                <value>
                    <fullName>Mobile Home</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Voucher_Type__c</fullName>
        <label>Voucher Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RRH</fullName>
                </value>
                <value>
                    <fullName>VASH</fullName>
                </value>
                <value>
                    <fullName>SBV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waiter_Waitress__c</fullName>
        <label>Waiter/Waitress</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warehouse_Facilities__c</fullName>
        <label>Warehouse/Facilities</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_did_they_contact_us__c</fullName>
        <label>Why did they contact us?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Option 1</fullName>
                </value>
                <value>
                    <fullName>Option 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X10_Year_Work_School__c</fullName>
        <label>10 Year Work/School</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>YARDI_PHMY__c</fullName>
        <label>YARDI_PHMY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YARDI_THMY__c</fullName>
        <label>YARDI_THMY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yardi_ID__c</fullName>
        <inlineHelpText>This is the Unique Identifier in Yardi, Most likely the &quot;T&quot; Number</inlineHelpText>
        <label>Yardi ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Youth_Build__c</fullName>
        <label>Youth Build</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>Prospect_Number_YARDI__c</columns>
        <columns>Tenant_Number_YARDI__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>Housing_Finance_Database_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Gender__c</columns>
        <columns>Ethnicity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDHC_Community_Relationship__c</field>
            <operation>includes</operation>
            <value>Housing Finance Database</value>
        </filters>
        <label>Housing Finance Database Contacts</label>
        <sharedTo>
            <group>Housing_Finance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Housing_Finance_Partners</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Contact_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.SDHC_Partners</value>
        </filters>
        <filters>
            <field>SDHC_Community_Relationship__c</field>
            <operation>includes</operation>
            <value>Housing Finance Database</value>
        </filters>
        <label>Housing Finance Partners</label>
        <sharedTo>
            <group>Housing_Finance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Housing_First_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>SSN_TaxID__c</columns>
        <columns>Service_Provider_Organization__c</columns>
        <columns>Subsidy_Program_Type__c</columns>
        <columns>Homeless__c</columns>
        <columns>Veteran__c</columns>
        <columns>CONTACT.ASSISTANT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDHC_Community_Relationship__c</field>
            <operation>includes</operation>
            <value>Housing First - Contact</value>
        </filters>
        <label>Housing First Contacts</label>
        <sharedTo>
            <group>Housing_First</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Housing_First_Diversion</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>SSN_TaxID__c</columns>
        <columns>Service_Provider_Organization__c</columns>
        <columns>Subsidy_Program_Type__c</columns>
        <columns>Homeless__c</columns>
        <columns>Veteran__c</columns>
        <columns>CONTACT.ASSISTANT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDHC_Community_Relationship__c</field>
            <operation>includes</operation>
            <value>Housing First - Diversion</value>
        </filters>
        <label>Housing First Diversion</label>
        <sharedTo>
            <group>Housing_First</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Housing_First_Moving_Home</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>SSN_TaxID__c</columns>
        <columns>Service_Provider_Organization__c</columns>
        <columns>Subsidy_Program_Type__c</columns>
        <columns>Homeless__c</columns>
        <columns>Veteran__c</columns>
        <columns>CONTACT.ASSISTANT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDHC_Community_Relationship__c</field>
            <operation>includes</operation>
            <value>Housing First - Moving Home</value>
        </filters>
        <label>Housing First Moving Home</label>
        <sharedTo>
            <group>Housing_First</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Housing_First_Prevention</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>SSN_TaxID__c</columns>
        <columns>Service_Provider_Organization__c</columns>
        <columns>Subsidy_Program_Type__c</columns>
        <columns>Homeless__c</columns>
        <columns>Veteran__c</columns>
        <columns>CONTACT.ASSISTANT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDHC_Community_Relationship__c</field>
            <operation>includes</operation>
            <value>Housing First - Prevention</value>
        </filters>
        <label>Housing First Prevention</label>
        <sharedTo>
            <group>Housing_First</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Housing_First_Referrals</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>SSN_TaxID__c</columns>
        <columns>Service_Provider_Organization__c</columns>
        <columns>Subsidy_Program_Type__c</columns>
        <columns>Homeless__c</columns>
        <columns>Veteran__c</columns>
        <columns>CONTACT.ASSISTANT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDHC_Community_Relationship__c</field>
            <operation>includes</operation>
            <value>Housing First - Referral</value>
        </filters>
        <label>Housing First Referrals</label>
        <sharedTo>
            <group>Housing_First</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>RAD_Wait_List_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>SSN_TaxID__c</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>Prospect_Number_YARDI__c</columns>
        <columns>Tenant_Number_YARDI__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Date_of_Birth__c</columns>
        <columns>Do_not_Have__c</columns>
        <columns>Residential_City__c</columns>
        <columns>Residential_State__c</columns>
        <columns>Residential_Street__c</columns>
        <columns>Residential_Zipcode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ACCOUNT_ID</field>
            <operation>equals</operation>
            <value>001t0000008fZgh</value>
        </filters>
        <label>RAD Wait List Contacts</label>
        <sharedTo>
            <group>RAD</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Rehab_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDHC_Community_Relationship__c</field>
            <operation>includes</operation>
            <value>Rehab</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.SDHC_Client</value>
        </filters>
        <label>Rehab Contacts</label>
        <sharedTo>
            <group>Rehab</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Rehab_Partners</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDHC_Community_Relationship__c</field>
            <operation>includes</operation>
            <value>Rehab</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.SDHC_Partners</value>
        </filters>
        <label>Rehab Partners</label>
        <sharedTo>
            <group>Rehab</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SDHC_Internal_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.SDHC_Employee</value>
        </filters>
        <label>SDHC Internal Contacts</label>
        <sharedTo>
            <role>Super_User</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Section_3_Business_Cotacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Contact_Type__c</columns>
        <columns>Ethnicity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.SDHC_Partners</value>
        </filters>
        <filters>
            <field>SDHC_Community_Relationship__c</field>
            <operation>includes</operation>
            <value>Section 3</value>
        </filters>
        <label>Section 3 Business Cotacts</label>
        <sharedTo>
            <group>Section_3</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Section_3_Residents</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Disabled__c</columns>
        <columns>Education__c</columns>
        <columns>Ethnicity__c</columns>
        <columns>Gender__c</columns>
        <columns>Hired__c</columns>
        <columns>SSN_TaxID__c</columns>
        <columns>Veteran__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDHC_Community_Relationship__c</field>
            <operation>includes</operation>
            <value>Section 3</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.SDHC_Client</value>
        </filters>
        <label>Section 3 Residents</label>
        <sharedTo>
            <group>Section_3</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Applicant</fullName>
        <active>true</active>
        <description>Rental Assistance Wait List Portal Record Type</description>
        <label>Applicant</label>
    </recordTypes>
    <recordTypes>
        <fullName>SDHC_Client</fullName>
        <active>true</active>
        <description>This is someone SDHC is engaged with in an assistance capacity (A Homeless Person). Not a Partner or Landlord, etc.</description>
        <label>SDHC Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>SDHC_Employee</fullName>
        <active>true</active>
        <description>These people are Employees at SDHC and have a Login to the Salesforce System.</description>
        <label>SDHC Employee</label>
    </recordTypes>
    <recordTypes>
        <fullName>SDHC_Partners</fullName>
        <active>true</active>
        <description>This Contact Type is for Business Personnel that work with SDHC in one or more capacities. Not individuals we are providing a service to.</description>
        <label>SDHC Partners</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Email_Required</fullName>
        <active>true</active>
        <description>When paperless/ email only checked , Email is required</description>
        <errorConditionFormula>AND(
 Paperless_Email_only__c  = TRUE,
ISBLANK(Email ))</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Please enter the email address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FirstName_Character_Length</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(FirstName)&gt; 32</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>First Name should not exceed 32 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HFirstEmployee_Requires_SDHC</fullName>
        <active>true</active>
        <description>If this is a Housing First employee, then they must select at least one SDHC Community Relationship related to Housing First.</description>
        <errorConditionFormula>AND
  (
    INCLUDES($User.SDHC_Program_Affiliation__c,&quot;Housing First&quot;), 
    NOT
     ( 
      OR
        (
          INCLUDES(  SDHC_Community_Relationship__c  , &quot;Housing First - Contact&quot;),
          INCLUDES(  SDHC_Community_Relationship__c  , &quot;Housing First - Referral&quot;),
          INCLUDES(  SDHC_Community_Relationship__c  , &quot;Housing First - Prevention&quot;),
          INCLUDES(  SDHC_Community_Relationship__c  , &quot;Housing First - Diversion&quot;),
          INCLUDES(  SDHC_Community_Relationship__c  , &quot;Housing First - Moving Home&quot;),
          INCLUDES(  SDHC_Community_Relationship__c  , &quot;Housing First&quot;)
        ) 
     )
   )</errorConditionFormula>
        <errorDisplayField>SDHC_Community_Relationship__c</errorDisplayField>
        <errorMessage>You have not set a Housing First Relationship. Please select from the list one of the Housing First relationships to save the record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LastName_Character_Length</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(LastName)&gt; 40</errorConditionFormula>
        <errorDisplayField>LastName</errorDisplayField>
        <errorMessage>Last Name should not exceed 40 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Character_Length</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(Phone)&gt; 20</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Phone should not exceed 20 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Prevention_Score</fullName>
        <active>true</active>
        <description>Requires a Prevention Score if the SDHC program Affiliation = Housing First - Prevention</description>
        <errorConditionFormula>AND( INCLUDES(SDHC_Community_Relationship__c, &apos;Housing First - Prevention&apos;) , ISBLANK( Prevention_Score__c ) )</errorConditionFormula>
        <errorDisplayField>Prevention_Score__c</errorDisplayField>
        <errorMessage>If this client is a Housing First - Prevention Client then you must add in their Prevention Score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Residential_State_Character_Length</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(Residential_State__c)&gt; 5</errorConditionFormula>
        <errorDisplayField>Residential_State__c</errorDisplayField>
        <errorMessage>Residential State should not exceed 5 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SDHC_Client_Account_Grouping</fullName>
        <active>true</active>
        <description>This rule makes sure that &quot;SDHC Contact Management Grouping&quot; is selected if the Contact is an &quot;SDHC - Client&quot;</description>
        <errorConditionFormula>AND(  RecordType.Name  = &quot;SDHC Client&quot;, Account.Name != &quot;SDHC Contact Management Grouping&quot;)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>You must select &quot;SDHC Contact Management Grouping&quot; when you have a Contact that is an &quot;SDHC Client&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Provider_Check</fullName>
        <active>true</active>
        <description>Make Service Provider Organization mandatory for Referral and Moving Home</description>
        <errorConditionFormula>AND( OR( INCLUDES(SDHC_Community_Relationship__c, &apos;Housing First - Referral&apos;), INCLUDES(SDHC_Community_Relationship__c, &apos;Housing First - Moving Home&apos;)) ,  ISBLANK(Service_Provider_Organization__c))</errorConditionFormula>
        <errorDisplayField>Service_Provider_Organization__c</errorDisplayField>
        <errorMessage>You must supply a Service Provider Organization when a Contact is selected as Housing First - Referral or Housing First - Moving Home in the SDHC Program Affiliation Selection Box.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Count_of_application</fullName>
        <active>true</active>
        <errorConditionFormula>Count_of_Applications__c  &gt; 1</errorConditionFormula>
        <errorMessage>You cannnot create multiple application per contact</errorMessage>
    </validationRules>
</CustomObject>